fix(status): fix left icon overflow display

--- a/projects/status/src/status.component.scss
+++ b/projects/status/src/status.component.scss
@@ -16,6 +16,10 @@ ngx-status {
             font-size: 2rem;
         }
 
+        > .mat-icon {
+            overflow: visible;
+        }
+
         > span {
             b {
                 display: block;
